--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ engine/CharacterScaleSphere(1.7m).obj
 misc/*
 engine/editor/MaterialEditorClass.js
 engine/editor/EntityManagerClass.js
+engine/pre-alpha/releases/*
